# CEngine

./: .gitignore  .gitmodules  AGENTS.md  Algorithm.c  Algorithm.h  Animation.c  Animation.h  Arena.h  AssetManager.c  BasisBinding.h  BasisSokol.cpp  CEngine.10x  CMakeLists.txt  CPlayground.10x  Common.h  Compile.bat  ECS.c  EditorSettings.txt  EditorUI.txt  FileSystem.c  FileSystem.h  GLTFParser.c  Graphics.c  Graphics.h  Main.c  Memory.c  Memory.h  OS.c  Platform.c  Queue.h  README.md  RedBlackTree.c  SOAMath.h  ShaderCompile.bat  TLSF.c  Texture.c  trace.txt
Assets/Meshes/: Fox.bdc  Fox.glb  FoxImage00.basis  FoxTest.txt  Sphere.abm
Assets/Scenes/: BistroBig.scene  BistroGood.scene  GizmoTest.scene  HelmetTest.scene  Lights.scene  SponzaTest.scene
Assets/Scripts/: GenerateEditorWindowIcons.py  HalfResizer.cpp
Include/: Algorithm.h  Animation.h  Arena.h  AssetManager.h  Async.h  BVH.h  BasisBinding.h  BasisCompressWrapper.h  Bitset.h  Camera.h  Common.h  DemoScene.h  ECS.h  Editor.h  FastDelta.h  FileSystem.h  GLTFParser.h  Graphics.h  IntFloat.h  JobSystem.h  Memory.h  OS.h  ParallelFor.h  Platform.h  Queue.h  Random.h  RedBlackTree.h  RenderLimits.h  RenderSet.h  Rendering.h  SIMD.h  Scene.h  SceneBundleCache.h  SceneNormalize.h  SceneSerializer.h  Slug.h  String.h  TLSF.h  Terrain.h  TextureSystem.h  (+2 more)
Include/DataStructures/: HashMap.h  Queue.h  SparseSet.h
Math/: Bitpack.h  Color.h  Half.h  Math.h  MathTest.c  Matrix.h  Quaternion.h  SIMD.h  SOAMath.h  Vector.h
Shaders/: AnimateVertices.hlsl  AnimatedTransform.hlsl  AnimationCompute.hlsl  Bitpack.hlsl  Common.hlsl  CommonStructs.hlsl  CompileShaders.py  Cube.glsl  Cube.glsl.h  CullDrawArgsCompute.hlsl  DeferredLightVolume.hlsl  DeferredLighting.hlsl  DepthResolveMSAACompute.hlsl  ExtractNormalCompute.hlsl  GodRays.hlsl  HBAOBlurCompute.hlsl  HBAOCompute.hlsl  HBAONormalCompute.hlsl  HiZBuildCompute.hlsl  HiZDownscaleCompute.hlsl  LOD.hlsl  LineDebug.hlsl  LocalLights.hlsl  MLAABlendCompute.hlsl  MLAACommon.hlsl  MLAAEdgeMaskCompute.hlsl  MLAALineLengthCompute.hlsl  Math.hlsl  NoiseHash.hlsl  Outline.hlsl  PBR.hlsl  ReconstructNormalCompute.hlsl  SDSMSetupShadows.hlsl  ShaderCompile.bat  Shadow.hlsl  ShadowCascade.hlsl  Skinned.hlsl  SkinnedDepthOnly.hlsl  SkinnedForward.hlsl  SkinnedFrag.hlsl  (+26 more)
Shaders/Animation/: AnimateVertices.hlsl  AnimationCompute.hlsl  Skinned.hlsl
Shaders/PostProcessing/: BloomPrefilterDownsampleCompute.hlsl  BloomUpsampleCompute.hlsl  ContactShadowsCompute.hlsl  GodRays.hlsl  HBAOBlurCompute.hlsl  HBAOCompute.hlsl  MLAABlendCompute.hlsl  MLAACommon.hlsl  MLAAEdgeMaskCompute.hlsl  MLAALineLengthCompute.hlsl  Sky.hlsl  TonemapCompute.hlsl  bend_sss_gpu.h
Shaders/PreProcessing/: BuildLightGridCompute.hlsl  BuildLightTilesCompute.hlsl  CullDrawArgsCompute.hlsl  CullLightsCompute.hlsl  HiZBuildCompute.hlsl  HiZDownscaleCompute.hlsl
Shaders/Shadow/: SDSMDepthBoundsInitial.hlsl  SDSMDepthBoundsReduce.hlsl  SDSMSetupShadows.hlsl  Shadow.hlsl  SkinnedPointShadowDepthOnly.hlsl  SkinnedShadowDepthOnly.hlsl  SkinnedSpotShadowDepthOnly.hlsl  SurfacePointShadowDepthOnly.hlsl  SurfaceShadowDepthOnly.hlsl  SurfaceSpotShadowDepthOnly.hlsl
Shaders/UI/: ColorPickCompute.hlsl  Slug.hlsl  UIImage.hlsl  UIShape.hlsl
Shaders/msl/: DeferredLightVolumeFrag.msl.h  DeferredLightVolumeVert.msl.h  DeferredLighting.msl.h  ExtractNormalCompute.msl.h  LineDebugFrag.msl.h  LineDebugVert.msl.h  OutlineFrag.msl.h  OutlineVert.msl.h  SkinnedDepthOnlyFrag.msl.h  SkinnedDepthOnlyVert.msl.h  SkinnedFrag.msl  SkinnedFrag.msl.h  SkinnedVert.msl  SkinnedVert.msl.h  Slug2DVert.msl.h  SurfaceDepthOnlyFrag.msl.h  SurfaceDepthOnlyVert.msl.h  SurfaceFrag.msl.h  SurfaceVert.msl.h  TerrainDepthOnlyFrag.msl.h  TerrainDepthOnlyVert.msl.h  TerrainFrag.msl.h  TerrainVert.msl.h  TerrainWireFrag.msl.h  TexturePageCopyRG.msl.h  TexturePageCopyRGBA.msl.h
Shaders/spv/: AnimateVertices.spv.h  AnimationCompute.spv.h  CullDrawArgsCompute.spv.h  DeferredLightVolumeFrag.spv.h  DeferredLightVolumeVert.spv.h  DeferredLighting.spv.h  DepthResolveMSAACompute.spv.h  ExtractNormalCompute.spv.h  HBAOBlurCompute.spv.h  HBAOCompute.spv.h  HBAONormalCompute.spv.h  HiZBuildCompute.spv.h  HiZDownscaleCompute.spv.h  LineDebugFrag.spv.h  LineDebugVert.spv.h  MLAABlendCompute.spv.h  MLAAEdgeMaskCompute.spv.h  MLAALineLengthCompute.spv.h  OutlineFrag.spv.h  OutlineVert.spv.h  SDSMDepthBoundsInitial.spv.h  SDSMDepthBoundsReduce.spv.h  SDSMSetupShadows.spv.h  SkinnedDepthOnlyFrag.spv.h  SkinnedDepthOnlyVert.spv.h  SkinnedFrag.spv  SkinnedFrag.spv.h  SkinnedShadowDepthOnlyFrag.spv.h  SkinnedShadowDepthOnlyVert.spv.h  SkinnedVert.spv  SkinnedVert.spv.h  Slug2DVert.spv.h  SlugFrag.spv.h  SlugVert.spv.h  SurfaceDepthOnlyFrag.spv.h  SurfaceDepthOnlyVert.spv.h  SurfaceFrag.spv.h  SurfaceShadowDepthOnlyFrag.spv.h  SurfaceShadowDepthOnlyVert.spv.h  SurfaceVert.spv.h  (+12 more)
Source/: AOC.c  Algorithm.c  Animation.c  AnimationBake.c  AssetManager.c  AssetsEditor.c  Async.c  BVH.c  BasisBinding.cpp  BasisCompressWrapper.cpp  BasisSokol.cpp  CPlayground.10x  ConsoleEditor.c  DemoScene.c  ECS.c  Editor.c  EditorGizmo.c  EditorInternal.h  FileSystem.c  GLTFParser.c  GLTFParser2.c  Graphics.c  HashMap.h  JobSystem.c  KBTextShape.c  Main.c  MainSDL.c  Memory.c  MeshBake.c  OS.c  ParallelFor.c  Physics.c  Platform.c  RedBlackTree.c  RenderSet.c  Rendering.c  RenderingCompute.c  RenderingDraw.c  RenderingInternal.h  RenderingPipelines.c  (+11 more)
Source/AssetManagement/: AssetManager.c  BasisBinding.cpp  GLTFParser.c  MeshBake.c  SceneNormalize.c  TextureSystem.c
Source/Editor/: AssetsEditor.c  Editor.c  EditorGizmo.c  EditorInternal.h  SceneEditor.c  TerrainEditor.c
Source/Rendering/: Graphics.c  RenderSet.c  Rendering.c  RenderingCompute.c  RenderingDraw.c  RenderingInternal.h  RenderingPipelines.c  Shadow.c  bend_sss_cpu.h
Source/Terrain/: Terrain.c  TerrainDensity.c  TerrainEdit.c  TerrainInternal.h  TransvoxelMesher.c  TransvoxelTables.h
Tests/: BitsetTest.c  RenderSetTest.c  RunRenderSetTest.bat  RunSceneSerializerLoadLoopTest.bat  SceneSerializerLoadLoopTest.c
(+74 files in other folders)
